tests/machine/x/c/join_multi.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int id;
  const char *name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int customer_id;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int order_id;
  const char *sku;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *name;
  const char *sku;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  customer_t customers[] = {(customer_t){.id = 1, .name = "Alice"},
                            (customer_t){.id = 2, .name = "Bob"}};
  int customers_len = sizeof(customers) / sizeof(customers[0]);
  order_t orders[] = {(order_t){.id = 100, .customer_id = 1},
                      (order_t){.id = 101, .customer_id = 2}};
  int orders_len = sizeof(orders) / sizeof(orders[0]);
  item_t items[] = {(item_t){.order_id = 100, .sku = "a"},
                    (item_t){.order_id = 101, .sku = "b"}};
  int items_len = sizeof(items) / sizeof(items[0]);
  result_item_list_t tmp1 =
      result_item_list_t_create(orders_len * customers_len * items_len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < orders_len; tmp3++) {
    order_t o = orders[tmp3];
    for (int tmp4 = 0; tmp4 < customers_len; tmp4++) {
      customer_t c = customers[tmp4];
      if (!(o.customer_id == c.id)) {
        continue;
      }
      for (int tmp5 = 0; tmp5 < items_len; tmp5++) {
        item_t i = items[tmp5];
        if (!(o.id == i.order_id)) {
          continue;
        }
        tmp1.data[tmp2] = (result_item_t){.name = c.name, .sku = i.sku};
        tmp2++;
      }
    }
  }
  tmp1.len = tmp2;
  result_item_list_t result = tmp1;
  printf("--- Multi Join ---\n");
  for (int tmp6 = 0; tmp6 < result.len; tmp6++) {
    result_item_t r = result.data[tmp6];
    printf("%s bought item %s\n", r.name, r.sku);
  }
  return 0;
}
int main() { return _mochi_main(); }
